# grounder

./: .gitignore  README.md  build.py  ground.py  profile.sh  requirements.txt
dev/: run-tests.py
experiments/combine-with-clingo/: combine-htg.py  combine-ipc.py
experiments/first-experiment/: htg.py  ipc.py  parser.py
experiments/rule-inheritance/: combine-htg.py  combine-ipc.py  htg.py  ipc.py  parser.py
experiments/term-class-exp/: combine-ipc.py  htg.py  ipc.py  parser.py
src/grounder/: CMakeLists.txt  arguments.h  atom.cc  atom.h  fact.cc  fact.h  instantiate.cc  instantiate.h  join_hash_table.h  join_structures.h  logic_program.cc  logic_program.h  main.cc  object.cc  object.h  parser.cc  parser.h  rule_matcher.cc  rule_matcher.h  rules.cc  rules.h  term.h
src/grounder/grounders/: fast_downward_grounder.cc  fast_downward_grounder.h  grounder.h  grounder_factory.h  new_grounder.cc  new_grounder.h
src/grounder/rules/: join.h  join_rule.h  join_structures.h  product.h  project.h  rule.cc  rule.h  rule_base.cc  rule_base.h
src/grounder/utils/: scc.cc  scc.h
src/translate/: build_model.py  pddl_to_prolog.py  test
src/translate/pddl/: actions.py  axioms.py  conditions.py  effects.py
